--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.navbar{
-  background-color: purple;
-  height: 50px;
-  text-align: left;
-  margin-top: 0;
-  color: white;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.active {
+  background-color: blue;
+  background:blue;
+  color: blue;
 }
